@@ -1,15 +1,13 @@
 package proj.pet.block.service;
 
-import static proj.pet.follow.domain.FollowType.BLOCK;
-
 import java.util.List;
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 import proj.pet.block.domain.Block;
 import proj.pet.block.dto.BlockRequestDto;
+import proj.pet.follow.domain.FollowType;
 import proj.pet.mapper.MemberMapper;
 import proj.pet.member.dto.MemberPreviewResponseDto;
 import proj.pet.member.dto.UserSessionDto;
@@ -41,9 +39,8 @@ public class BlockFacadeServiceImpl implements BlockFacadeService {
 		Long memberId = userSessionDto.getMemberId();
 		Pageable pageable = PageRequest.of(page, size);
 		List<Block> myBlockList = blockQueryService.getBlockList(memberId, pageable);
-		List<MemberPreviewResponseDto> myBlockDtoList = myBlockList.stream()
-				.map((block) -> memberMapper.toMemberPreviewResponseDto(block.getTo(), BLOCK))
-				.collect(Collectors.toList());
-		return myBlockDtoList;
+		return myBlockList.stream().map((block) ->
+				memberMapper.toMemberPreviewResponseDto(block.getTo(), FollowType.BLOCK)
+		).toList();
 	}
 }
